syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.packets;
import "enums/ServerType.proto";

message TransferPlayerPacketC2S {
  org.minigamzreborn.bytelyplay.protobuffer.enums.ServerType type = 1;
  string uuid = 2;
}