syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.packets;

message UnregisterServerPacketC2S {
  string ip = 1;
  int32 port = 2;
}