syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.packets.c2s;
import "enums/ServerType.proto";

message RegisterServerPacketC2S {
  org.minigamzreborn.bytelyplay.protobuffer.enums.ServerType type = 1;
  string address = 2;
  uint32 port = 3;
}